Inicio das rotas de veiculos
